<resources>
    <string name="app_name">Laudos Veterinários</string>
    <string name="report">Laudos</string>
    <string name="new_report">Novo</string>
    <string name="search">Perquisar</string>
    <string name="gender">Gênero</string>
    <string name="specie">Espécie</string>
    <string name="breed">Raça</string>
    <string name="male">Macho</string>
    <string name="female">Fêmea</string>
    <string name="save">Salvar</string>
    <string name="name">Nome</string>
    <string name="age">Idade</string>
    <string name="weight">Peso</string>
    <string name="owner">Responsável</string>
    <string name="previous_exams">Exames prévios</string>
    <string name="diagnostics">Diagnóstico</string>
    <string name="procedure_performed">Procedimento realizado</string>
    <string name="recommendations">Recomendações</string>
    <string name="ok">OK</string>
    <string name="new_exam">Novo exame</string>
    <string name="new_diagnostic">Novo diagnóstico</string>
    <string name="cancel">Cancelar</string>
    <string name="history">Histórico</string>
    <string name="procedured_at">Realizado em</string>
    <string name="procedure_at">Realizado em</string>
    <string name="init_at">Inicio</string>
    <string name="end_at">Fim</string>
    <string name="export">Exportar</string>
    <string name="find">Localizar</string>
    <string name="settings">Configurações</string>
    <string name="shared">Compartilhar</string>
    <string name="patient_name_formatted">&lt;b>Nome:&lt;/b> %1$s</string>
    <string name="specie_formatted">&lt;b>Espécie:&lt;/b> %1$s</string>
    <string name="breed_formatted">&lt;b>Raça:&lt;/b> %1$s</string>
    <string name="gender_formatted">&lt;b>Gênero:&lt;/b> %1$s</string>
    <string name="age_formatted">&lt;b>Idade:&lt;/b> %1$s</string>
    <string name="weight_formatted">&lt;b>Peso:&lt;/b> %1$s</string>
    <string name="owner_formatted">&lt;b>Responsável:&lt;/b> %1$s</string>
    <string name="clinic">Clínica</string>
    <string name="medical_team">Equipe médica</string>
    <string name="anesthetic_procedure_performed">Procedimento Anestésico Realizado</string>
    <string name="anamnesis">Anamnese (fornecido pelo clínico)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Patient_info">Paciente</string>
    <string name="procedure">Procedimento</string>
    <string name="patient_name">Nome do paciente</string>
    <string name="months">Meses</string>
    <string name="kilos">Quilos</string>
    <string name="grams">Gramas</string>
    <string name="save_all_data">Salvar dados do procedimento</string>
    <string name="shared_this_procedure">Compartilhar com contatos</string>
    <string name="photo">Foto</string>
    <string name="attach_new_photo">Adicionar foto ao procedimento</string>
    <string name="gallery">Galeria</string>
    <string name="clinic_name">Clinic name</string>
    <string name="surgeon">Cirurgião</string>
    <string name="date">Data</string>
</resources>
