<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="8dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/patient_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/clinic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/procedure"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/date"/>
        </LinearLayout>
        <Space
            android:layout_width="16dp"
            android:layout_height="0dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/patient_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/patient_name"/>
            <TextView
                android:id="@+id/clinic_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/clinic"/>
            <TextView
                android:id="@+id/procedure_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/procedure"/>
            <TextView
                android:id="@+id/procedure_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/date"/>
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>