<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewReportActivity">

    <include android:id="@+id/toolbar_layout" layout="@layout/toolbar" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">
        <LinearLayout
            android:id="@+id/first_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/gender"/>
                <AutoCompleteTextView
                    android:id="@+id/gender_actv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:completionThreshold="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/specie"/>
                <AutoCompleteTextView
                    android:id="@+id/specie_actv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:completionThreshold="1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/breed"/>
                <AutoCompleteTextView
                    android:id="@+id/breed_actv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:completionThreshold="1" />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="0.8"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/patient_photo"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    app:srcCompat="@drawable/ic_add_a_photo_black_24dp"
                    tools:srcCompat="@tools:sample/avatars[3]" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/patient_photo"
                    android:layout_centerHorizontal="true">
                    <ImageButton
                        android:id="@+id/new_photo"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />
                    <Space
                        android:layout_width="20dp"
                        android:layout_height="0dp"/>
                    <ImageButton
                        android:id="@+id/view_gallery"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        app:srcCompat="@drawable/ic_collections_black_24dp" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_layout">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/name"/>
                <EditText
                    android:id="@+id/patient_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/age"/>
                <EditText
                    android:id="@+id/patient_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/weight"/>
                <EditText
                    android:id="@+id/patient_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/owner"/>
        <EditText
            android:id="@+id/owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="textPersonName"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/previous_exams"/>
        <TextView
            android:id="@+id/previous_exams"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawableEnd="@drawable/ic_add_black_24dp"
            android:drawablePadding="8dp"/>
        <view
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#C0C0C0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/diagnostics"/>
        <TextView
            android:id="@+id/diagnostics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawableEnd="@drawable/ic_add_black_24dp"
            android:drawablePadding="8dp"
            android:ems="10" />
        <view
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#DCDCDC"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/procedure_performed"/>
        <EditText
            android:id="@+id/procedure_performed"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:drawablePadding="8dp"
            android:ems="10"
            android:inputType="textPersonName" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/recommendations"/>
            <EditText
                android:id="@+id/recommendations"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:maxLines="6"
                android:textSize="12sp"/>
    </LinearLayout>




    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="save"
        android:text="@string/save" />

</RelativeLayout>