<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PatientDataFragment"
    tools:ignore="UselessParent">
    <LinearLayout
        android:id="@+id/first_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:baselineAligned="false">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/patient_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/patient_name"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/owner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="14sp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/owner"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <EditText
                        android:id="@+id/patient_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginStart="8dp"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:hint="@string/age"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <EditText
                        android:id="@+id/patient_mouth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginStart="8dp"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:hint="@string/months"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <EditText
                        android:id="@+id/patient_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginStart="8dp"
                        android:inputType="numberDecimal"
                        android:hint="@string/kilos"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <EditText
                        android:id="@+id/patient_gram"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginStart="8dp"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:hint="@string/grams"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginEnd="8dp"
            android:layout_weight="0.8"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/patient_photo"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/ic_add_a_photo_black_24dp"
                tools:srcCompat="@tools:sample/avatars[3]" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/patient_photo"
                android:layout_marginTop="4dp"
                android:layout_centerHorizontal="true">
                <ImageButton
                    android:id="@+id/new_photo"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />
                <Space
                    android:layout_width="20dp"
                    android:layout_height="0dp"/>
                <ImageButton
                    android:id="@+id/view_gallery"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    app:srcCompat="@drawable/ic_baseline_rotate_90_degrees_ccw_24" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <AutoCompleteTextView
            android:id="@+id/specie_actv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:completionThreshold="1"
            android:hint="@string/specie"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <AutoCompleteTextView
            android:id="@+id/breed_actv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:completionThreshold="1"
            android:hint="@string/breed"/>
    </com.google.android.material.textfield.TextInputLayout>
    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/gender_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:ms_floatingLabelText="@string/gender"
        app:ms_hint="@string/gender"
        app:ms_floatingLabelColor="@color/colorAccent"/>
</LinearLayout>
